syntax = "proto3";

package parquet;

option go_package = "github.com/simo7/protoc-gen-parquet/pb/parquetpb";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  // As long as table_name is not blank,
  // a schema is generated for top-level messages in each file.
  string table_name = 14756842;
}

extend google.protobuf.FieldOptions {
  bool ignored = 548935;
  TimestampType timestamp_type = 548933;
}

enum TimestampType {
  UNSPECIFIED = 0;
  TIMESTAMP_MILLIS = 1;
  TIMESTAMP_MICROS = 2;
  TIMESTAMP_NANOS = 3;
}

